crates/ink/tests/ui/contract/fail/module-missing-message.stderr
error: missing ink! message
 --> tests/ui/contract/fail/module-missing-message.rs:2:1
  |
2 | mod contract {
  | ^^^
